--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,16 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+		<!--Description de nous meme-->
+		<div>
+			<h1>Ma Description</h1>
+			<p>I'm Lengue Sandra , I'm studying Web developper , I interessed in cybersecurity and want to become a backend developper</p>
+		</div>
+		<!--Mes recompenses-->
+		<div>
+			<h1>Mes recompenses</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, maxime. 	</p>
+		</div>
 		
 	
 </body></html>
