Mon premier gist

--- a/hello.html
+++ b/hello.html
@@ -26,6 +26,13 @@
 			<h1>Mes recompenses</h1>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, maxime. 	</p>
 		</div>
+		<!--Mon gist-->
+		<div>
+			<h1>Mon gist</h1>
+			<p>
+				<script src="https://gist.github.com/1005fcv48/c45b6d0be2b550475240c49e98d06d0d.js"></script>
+			</p>
+		</div>
 		
 	
 </body></html>
