#1 : ajout des images de mes differentes medailles

--- a/hello.html
+++ b/hello.html
@@ -24,7 +24,8 @@
 		<!--Mes recompenses-->
 		<div>
 			<h1>Mes recompenses</h1>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, maxime. 	</p>
+			<img src="images/medal_bronze.png" alt="medal_bronze">
+			
 		</div>
 		<!--Mon gist-->
 		<div>
