--- a/hello.html
+++ b/hello.html
@@ -34,6 +34,15 @@
 				<script src="https://gist.github.com/1005fcv48/c45b6d0be2b550475240c49e98d06d0d.js"></script>
 			</p>
 		</div>
+		<!--Mes commandes git-->
+		<div>
+			<h1>Mes commandes git</h1>
+			<p>
+				git pull
+			</p>
+		</div>
+		
+		
 		
 	
 </body></html>
