ajout de la commande git checkout

--- a/hello.html
+++ b/hello.html
@@ -37,9 +37,8 @@
 		<!--Mes commandes git-->
 		<div>
 			<h1>Mes commandes git</h1>
-			<p>
-				git pull
-			</p>
+			<p>git pull</p>
+			<p>git checkout numero_shawan</p> <!--Revenir a une ancienne version de mon projet et aussi la premiere etape pour creer un tag-->
 		</div>
 		
 		
