ajout des commandes git log et git push

--- a/hello.html
+++ b/hello.html
@@ -39,6 +39,8 @@
 			<h1>Mes commandes git</h1>
 			<p>git pull</p>
 			<p>git checkout numero_shawan</p> <!--Revenir a une ancienne version de mon projet et aussi la premiere etape pour creer un tag-->
+			<p>git log</p> <!--affiche l'historique de nos commits-->
+			<p>git push</p>
 		</div>
 		
 		
