ajout de la commande git blame

--- a/hello.html
+++ b/hello.html
@@ -44,6 +44,7 @@
 			<p>git checkout numero_shawan</p> <!--Revenir a une ancienne version de mon projet et aussi la premiere etape pour creer un tag-->
 			<p>git log</p> <!--affiche l'historique de nos commits-->
 			<p>git push</p>
+			<p>git blame</p>
 		</div>
 		
 		
